worked on top bar, socials
consistent top bar in all pages
socials at the bottom

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
       <small>Blogs</small>
     </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+      target="_blank">
       <small>UITS<br>G-Drive</small>
     </a>
   </div>
@@ -65,13 +66,9 @@
           </a>
         </td>
         <td>
-          <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link" target="_blank">
+          <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+            target="_blank">
             Contests Archive
-          </a>
-        </td>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-            Curated Book List
           </a>
         </td>
         <td>
@@ -79,37 +76,47 @@
             Programming References
           </a>
         </td>
+        <td>
+          <a href="page-depth-01\Resources-Dump.html">
+            Resources Dump
+          </a>
+        </td>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
+            Curated Book List
+          </a>
+        </td>
       </tr>
     </table>
   </div>
 
- <!-- BLOGGER IFRAME -->
+  <!-- BLOGGER IFRAME -->
 
- <table border="10" align=center style="width:90%; max-width: 860px;">
-  <tr>
-    <th>
+  <table border="10" align=center style="width:90%; max-width: 860px;">
+    <tr>
+      <th>
 
-      <!-- "topnav3" -->
+        <!-- "topnav3" -->
 
-      <div class="topnav-3">
-        <h2>
-          <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
-        </h2>
-      </div>
-
-      <!-- "top-bar2" -->
-
-      <div class="top-bar-2">
-        <div class="iframe-container-2">
-          <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+        <div class="topnav-3">
+          <h2>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+          </h2>
         </div>
-      </div>
 
-      <div class="overlay-2"></div>
-      <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
-    </th>
-  </tr>
-</table>
+        <!-- "top-bar2" -->
+
+        <div class="top-bar-2">
+          <div class="iframe-container-2">
+            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+          </div>
+        </div>
+
+        <div class="overlay-2"></div>
+        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
+      </th>
+    </tr>
+  </table>
 
   <br>
   <br>
@@ -122,6 +129,22 @@
 
 
   <div align="center">
+
+
+    <div style="min-width: 200px;width:60% ;">
+      <!-- BOTTOM CREDITS -->
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
+          <b>UNOFFICIAL</b>
+          Online
+          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
+            href="https://github.com/b1tranger/oUITS-Resources" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
+          but
+          please be mindful of possible Legal issues (like Copyright materials)</small></p>
+    </div>
+
+    <br>
+
     <div>
       <!-- SOCIAL LINKS -->
       <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
@@ -138,18 +161,6 @@
           target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
 
     </div>
-    <br>
-    <div style="min-width: 200px;width:60% ;">
-      <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
-          <b>UNOFFICIAL</b>
-          Online
-          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
-            href="https://github.com/b1tranger/oUITS-Resources" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
-          but
-          please be mindful of possible Legal issues (like Copyright materials)</small></p>
-    </div>
   </div>
 
 
@@ -161,8 +172,7 @@
 
   <p align=center></p>
 
-  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">Click Here to see work in
-      progress</a></p>
+  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">wip?</a></p>
 
 
   <!-- GO TOP RELATIVE LINK -->
