--- a/page-depth-01/Resources-Dump.html
+++ b/page-depth-01/Resources-Dump.html
@@ -6305,19 +6305,18 @@
 <div class="topnav-1">
 
     <a class="active-1" href="page-depth-01/Tutorials.html">
-        <small>Tutorials</small>
+      <small>Tutorials</small>
     </a>
     <a class="active-1" href="page-depth-01/References.html">
-        <small>References</small>
+      <small>References</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-        <small>Blogs</small>
+      <small>Blogs</small>
     </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-        target="_blank">
-        <small>UITS<br>G-Drive</small>
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+      <small>UITS<br>G-Drive</small>
     </a>
-</div>
+  </div>
 
 
 <!-- BOTTOM BAR "navbar" -->
@@ -6373,7 +6372,7 @@
         const isNearBottom = maxScroll - scrollPosition < 20;
 
         if (isNearBottom) {
-            buttonText.textContent = '';
+            buttonText.textContent = 'ggggg';
             arrow.className = 'arrow arrow-up';
         } else {
             buttonText.textContent = '';
