--- a/page-depth-01/Resources-Dump.html
+++ b/page-depth-01/Resources-Dump.html
@@ -6372,7 +6372,7 @@
         const isNearBottom = maxScroll - scrollPosition < 20;
 
         if (isNearBottom) {
-            buttonText.textContent = 'ggggg';
+            buttonText.textContent = '';
             arrow.className = 'arrow arrow-up';
         } else {
             buttonText.textContent = '';
