--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -48,7 +48,7 @@
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">2nd Semester FIles</p>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">3rd Semester FIles</p>
             </tr>
             <tr>
                 <td>
