added Resources Page for holding more lists

--- a/index.html
+++ b/index.html
@@ -71,19 +71,10 @@
             Contests Archive
           </a>
         </td>
+        
         <td>
-          <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
-            Programming References
-          </a>
-        </td>
-        <td>
-          <a href="page-depth-01\Resources-Dump.html">
+          <a href="page-depth-01\Curated-Resources.html">
             Resources Dump
-          </a>
-        </td>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-            Curated Book List
           </a>
         </td>
       </tr>
@@ -131,12 +122,12 @@
   <div align="center">
 
 
-    <div style="min-width: 200px;width:60% ;">
+    <div style="min-width: 350px;width:60% ;">
       <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is the first try on the web version of the
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is a trial web version of the
           <b>UNOFFICIAL</b>
           Online
-          Resources for the <i>students</i> of UITS. Note that I will be primarily working on <a
+          Resources for the <i>students</i> of UITS. I will be primarily working on <a
             href="https://github.com/b1tranger/oUITS-Resources" style="color:rgba(4, 0, 128, 0.806);">GitHub's
             Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
           but
