fixed relative links

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -21,10 +21,10 @@
 
     <div class="topnav-1">
 
-        <a class="active-1" href="page-depth-01/Tutorials.html">
+        <a class="active-1" href="Tutorials.html">
           <small>Tutorials</small>
         </a>
-        <a class="active-1" href="page-depth-01/References.html">
+        <a class="active-1" href="References.html">
           <small>References</small>
         </a>
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
