fixed bottom bar

--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -83,9 +83,9 @@
 
 
   <!-- BOTTOM BAR "navbar" -->
-
+<!-- 
   <div style="padding-left:16px">
-  </div>
+  </div> -->
   <div class="navbar-5">
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
