--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
   <!-- BOTTOM BAR "navbar" -->
 
-  <div style="padding-left:16px">
-  </div>
+  <!-- <div style="padding-left:16px">
+  </div> -->
   <div class="navbar-5">
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
