--- a/page-depth-01/Resources-Dump.html
+++ b/page-depth-01/Resources-Dump.html
@@ -6253,13 +6253,10 @@
             font-size: 11pt;
             font-family: "Arial"
         }
-
+/* 
         p {
-            margin: 0;
-            color: #000000;
-            font-size: 11pt;
-            font-family: "Arial"
-        }
+            margin: 0; color: #000000;font-size: 11pt;font-family: "Arial"
+        } */
 
         h1 {
             padding-top: 20pt;
@@ -6367,8 +6364,8 @@
 
 <!-- BOTTOM BAR "navbar" -->
 
-<div style="padding-left:16px">
-</div>
+<!-- <div style="padding-left:16px">
+</div> -->
 <div class="navbar-5">
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
@@ -6448,8 +6445,7 @@
     };
 </script>
 
-<div style="word-wrap: break-word;width:95%;">
-
+<div style="word-wrap: break-word;width:95%;margin: 0; color: #000000;font-size: 11pt;font-family: Arial>
 
     <p class="c4" id="h.paoh5s7tsnvt"><span class="c21"></span></p>
     <p class="c13"><span class="c0"></span></p>
