tried to fix Resources bottom bar
p class overrides original CSS (no p class)

--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -86,6 +86,13 @@
 <!-- 
   <div style="padding-left:16px">
   </div> -->
+
+<!-- IF p class overrides -->
+  <!-- <div class="navbar-5">
+    <p align=center style="color: #f2f2f2;font-size: 16;z-index: 1000;padding: 14px 16px;display: block;overflow: hidden; background-color: #333; position: fixed;bottom: 0;width: 100%;text-decoration: none;"><i>oUITS
+            Resources</i></p>
+</div> -->
+
   <div class="navbar-5">
     <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
