--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -67,7 +67,7 @@
             <tr>
                 <td>
                     <a href="Resources-Dump.html">
-                      Saraf's Resource List
+                      Saraf's Resources List
                     </a>
                   </td>
             </tr>
