--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
     </a>
   </div>
 
+
+
   <!-- GO BOTTOM RELATIVE LINK -->
 
-  <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p>
+  <!-- <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p> -->
 
   <!-- <div class="scroll-text">This is scrolling text.</div> -->
+
+
 
 
   <!-- HIGHLIGHTS OF DRIVE -->
@@ -71,7 +75,7 @@
             Contests Archive
           </a>
         </td>
-        
+
         <td>
           <a href="page-depth-01\Curated-Resources.html">
             Resources Dump
@@ -119,10 +123,37 @@
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
 
+  <!-- END CREDIT  -->
   <div align="center">
 
+    <!-- style="min-width: 350px;width:60% ;" -->
 
-    <div style="min-width: 350px;width:60% ;">
+
+
+    <div>
+      <!-- SOCIAL LINKS -->
+      <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
+
+      <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
+          alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+
+      <a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
+          alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+
+      <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
+          alt="Facebook Group (oUITS - Online Resources)" width="80" height="80"></a>
+
+ <!-- ANON NOTE (FEEDBACK) -->
+      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
+          style="color:rgba(0, 0, 0, 0.818);">Leave a
+          note?</a><br><br><a href=abstraction/wip.html
+          style="color:rgba(74, 170, 214, 0.499);">wip?</a>....<a
+          href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
+          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
+
+    </div>
+    
+    <div>
       <!-- BOTTOM CREDITS -->
       <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is a trial web version of the
           <b>UNOFFICIAL</b>
@@ -134,41 +165,13 @@
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
     </div>
 
-    <br>
-
-    <div>
-      <!-- SOCIAL LINKS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
-      <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
-          alt="Discord Server (Protein Shake)" width="70" height="70"></a>
-      <a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
-          alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
-      <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
-          alt="Facebook Group (oUITS - Online Resources)" width="80" height="80"></a>
-      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
-          style="color:rgba(0, 0, 0, 0.818);">Leave a
-          note?</a>....<a
-          href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
-          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
-
-    </div>
   </div>
 
-
-
-
-  <!-- ANON NOTE (FEEDBACK) -->
-
-
-
-  <p align=center></p>
-
-  <p align=center><a href=abstraction/wip.html style="color:rgba(74, 170, 214, 0.499);">wip?</a></p>
-
+  <br>
 
   <!-- GO TOP RELATIVE LINK -->
 
-  <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p>
+  <!-- <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.24);">go to top</a></small></p> -->
 
   <br>
   <br>
