added a Resources section and docx Link
Open Source Learning Platforms
Link to Resources Dump Docs for updated info

--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -66,14 +66,57 @@
             </tr>
             <tr>
                 <td>
-                    <a href="Resources-Dump.html">
-                      Saraf's Resources List
+                    <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
+                      Curated Book List
                     </a>
                   </td>
             </tr>
         </table>
     </div>
 
+    <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Learning</p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://ossu.firebaseapp.com/#/" target="_blank">
+                      OSSU<br> ( Open Source Society University )
+                    </a>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://pll.harvard.edu/" target="_blank">
+                      CS50 Courses from Harvard
+                    </a>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://ocw.mit.edu/" target="_blank">
+                      Some MIT Courses?
+                    </a>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://teachyourselfcs.com/" target="_blank">
+                      A written Guide to CS<br>( Teach Yourself CS )
+                    </a>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
+                     Onnorokom Pathshala<br> ( Best Bangla resources before undergrad, YouTube )
+                    </a>
+                  </td>
+            </tr>
+        </table>
+        <p style="color: rgba(240, 248, 255, 0.649);">( Since I am but a humble fan )</p>
+    </div>
 
 
 
