--- a/page-depth-01/Resources-Dump.html
+++ b/page-depth-01/Resources-Dump.html
@@ -6373,9 +6373,11 @@
     <!-- <div style="padding-left:16px">
 </div> -->
     <div class="navbar-5">
-        <p align=center style="color: #f2f2f2;font-size: 16;z-index: 1000;padding: 14px 16px;display: block;overflow: hidden; background-color: #333; position: fixed;bottom: 0;width: 100%;text-decoration: none;"><i>oUITS
+        <p align=center
+            style="color: #f2f2f2;font-size: 16;z-index: 1000;padding: 14px 16px;display: block;overflow: hidden; background-color: #333; position: fixed;bottom: 0;width: 100%;text-decoration: none;">
+            <i>oUITS
                 Resources</i></p>
-       
+
 
     </div>
 
@@ -6452,6 +6454,14 @@
 
 
     </script>
+
+    <p align=center><br><a style="color: #000000b2;"
+            href="https://docs.google.com/document/d/1EOJuTOzXslIHeFXmMDrNIV7vHBxxjHr5/edit?usp=sharing&ouid=107122346321668658639&rtpof=true&sd=true"
+            target="_blank">Click Here for Updates</a></p>
+
+
+
+
 
     <div style="word-wrap: break-word;width:95%;">
 
