added a page for OSSU

--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -81,7 +81,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://ossu.firebaseapp.com/#/" target="_blank">
+                    <a href="page-depth-02\OSSU.html">
                       OSSU<br> ( Open Source Society University )
                     </a>
                   </td>
