--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -66,8 +66,8 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-                      Curated Book List
+                    <a href="Resources-Dump.html">
+                      Saraf's Resources List
                     </a>
                   </td>
             </tr>
