--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </a>
         </td>
         <td>
-          <a href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">
-            Modified Library Questions
+          <a href="page-depth-01/General-Info.html">
+            General Informations
           </a>
         </td>
         <td>
