--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           Online
           Resources for the <i>students</i> of UITS. I will be primarily working on <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a>. Most of the materials here are publicly available and you are free to modify and reuse them
+            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/">Netlify</a> ). Most of the materials here are publicly available and you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
     </div>
