--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -118,7 +118,39 @@
         <p style="color: rgba(240, 248, 255, 0.649);">( Since I am but a humble fan )</p>
     </div>
 
-
+ <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">People I want to keep following</p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://youkn0wwho.academy/" target="_blank">
+                        youkn0wwho<br>(Shahjalal Shohag)
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://thebigcb.com/" target="_blank">
+                        Code Bullet
+                    </a>
+                  </td>
+                  
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://www.3blue1brown.com/" target="_blank">
+                        3blue1brown<br>(Grant Sanderson)
+                    </a>
+                  </td>
+                <td>
+                    <a href="#" target="_blank">
+                      #
+                    </a>
+                  </td>
+            </tr>
+           
+        </table>
+    </div>
 
 
 
