--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -143,15 +143,25 @@
                     </a>
                   </td>
                 <td>
-                    <a href="#" target="_blank">
-                      #
+                    <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
+                        Md Maksudul Hossain<br>(Onnorokom Pathshala, YouTube)
                     </a>
                   </td>
             </tr>
-           
+            <tr>
+                <td>
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                  </td>
+                <td>
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                  </td>
+            </tr>
         </table>
     </div>
-
 
 
 
