--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </td>
         <td>
           <a href="page-depth-01/General-Info.html">
-            General Informations
+            General Information
           </a>
         </td>
         <td>
