reorganized page locations

--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -66,7 +66,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="Resources-Dump.html">
+                    <a href="page-depth-02\Resources-Dump.html">
                       Saraf's Resources List
                     </a>
                   </td>
@@ -110,12 +110,12 @@
             <tr>
                 <td>
                     <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
-                     Onnorokom Pathshala<br> ( Best Bangla resources before undergrad, YouTube )
+                     Onnorokom Pathshala<br> ( Bangla resources until HSC )
                     </a>
                   </td>
             </tr>
         </table>
-        <p style="color: rgba(240, 248, 255, 0.649);">( Since I am but a humble fan )</p>
+        <!-- <p style="color: rgba(240, 248, 255, 0.649);">( Since I am but a humble fan )</p> -->
     </div>
 
  <div class="container-5" align=center>
@@ -144,7 +144,7 @@
                   </td>
                 <td>
                     <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
-                        Md Maksudul Hossain<br>(Onnorokom Pathshala, YouTube)
+                        Md Maksudul Hossain<br>(Onnorokom Pathshala)
                     </a>
                   </td>
             </tr>
