--- a/page-depth-01/page-depth-02/Resources-Dump.html
+++ b/page-depth-01/page-depth-02/Resources-Dump.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
 
     <style type="text/css">
         @import url(https://themes.googleusercontent.com/fonts/css?kit=Su9cPBdaKucZGyXzr7BkXw);
@@ -6352,10 +6352,10 @@
 
     <div class="topnav-1">
 
-        <a class="active-1" href="Tutorials.html">
+        <a class="active-1" href="../Tutorials.html">
             <small>Tutorials</small>
         </a>
-        <a class="active-1" href="References.html">
+        <a class="active-1" href="../References.html">
             <small>References</small>
         </a>
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
@@ -6383,7 +6383,7 @@
 
     <!-- HOME BUTTON -->
 
-    <a href="../index.html" class="home-button">
+    <a href="../../index.html" class="home-button">
         <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path
                 d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
