--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
 
-      <a href="https://t.me/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
+      <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
           alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
 
       <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
