--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -132,10 +132,10 @@
     <div class="topnav-1">
 
         <a class="active-1" href="Tutorials.html">
-          <small>../Tutorials</small>
+          <small>Tutorials</small>
         </a>
         <a class="active-1" href="References.html">
-          <small>../References</small>
+          <small>References</small>
         </a>
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
           <small>Blogs</small>
