--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -158,9 +158,9 @@
         <!-- ----------------------------------------------------------------------- -->
         <!-- <div align=center>
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
-    </div> -->
+    </div> 
         <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small>
-        </p>
+        </p>-->
 
         <div class="university-resources" style="width:80%;">
             <font size="5">
