--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -178,7 +178,7 @@
     <div class="glow"></div>
     <div class="container">
         <h1>Tutorial Collection</h1>
-        <p class="subtitle">(more to be added later)</p>
+    <!--    <p class="subtitle">(more to be added later)</p>--> 
 
         <section class="video-section">
             <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
