added blank links to the current page

--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -134,7 +134,7 @@
         <a class="active-1" href="Tutorials.html">
           <small>Tutorials</small>
         </a>
-        <a class="active-1" href="References.html">
+        <a class="active-1" href="#">
           <small>References</small>
         </a>
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
