--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -147,7 +147,7 @@
 
     <div class="topnav-1">
 
-        <a class="active-1" href="Tutorials.html">
+        <a class="active-1" href="#">
           <small>Tutorials</small>
         </a>
         <a class="active-1" href="References.html">
