updated how links look
style="text-decoration:none"

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       </th>
     </tr>
   </table>
-
+  <a href=abstraction/wip.html
+  style="color:rgba(74, 170, 214, 0.499);">wip?</a>
   <br>
   <br>
   <br>
@@ -146,8 +147,7 @@
  <!-- ANON NOTE (FEEDBACK) -->
       <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
           style="color:rgba(0, 0, 0, 0.818);">Leave a
-          note?</a><br><br><a href=abstraction/wip.html
-          style="color:rgba(74, 170, 214, 0.499);">wip?</a>....<a
+          note?</a>..<a
           href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
           target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
 
@@ -155,12 +155,12 @@
     
     <div>
       <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>This is a trial web version of the
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small style="font-size: x-small;">This is a trial web version of the
           <b>UNOFFICIAL</b>
           Online
           Resources for the <i>students</i> of UITS. I will be primarily working on <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/">Netlify</a> ). Most of the materials here are publicly available and you are free to modify and reuse them
+            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/"  style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ). Most of the materials here are publicly available and you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
     </div>
