--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -53,11 +53,11 @@
         <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
     </div> -->
     <div align=center>
-        <p align="center" style="width: 60%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
-                    batch</b><br><br>Take Note that Files may be
+        <p align="center" style="width: 80%;color: #8c8c8c;"><b><small>Most of this files are in relevance with CSE-55
+                    batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
                 outdated or
                 not organized to the latest course list. In that case, please email me
-                at <b>b1tranger.01@gmail.com</b> and let me know of the specific shortcomings of this page.
+                at <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=b1tranger.01@gmail.com&hl=en" style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific shortcomings of this page.
                 <br><br>Thanks in
                 advance!!
             </small></p>
