--- a/index.html
+++ b/index.html
@@ -112,25 +112,13 @@
       </th>
     </tr>
   </table>
-  <a href=abstraction/wip.html
-  style="color:rgba(74, 170, 214, 0.499);">wip?</a>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
 
   <!-- END CREDIT  -->
   <div align="center">
-
-    <!-- style="min-width: 350px;width:60% ;" -->
-
-
-
     <div>
       <!-- SOCIAL LINKS -->
       <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
@@ -144,23 +132,28 @@
       <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
           alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
 
- <!-- ANON NOTE (FEEDBACK) -->
+      <!-- ANON NOTE (FEEDBACK) -->
       <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
           style="color:rgba(0, 0, 0, 0.818);">Leave a
           note?</a>..<a
           href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
-          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a></p>
+          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a href=abstraction/wip.html
+            style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
     </div>
-    
+
     <div>
       <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small style="font-size: x-small;">This is a trial web version of the
+      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small style="font-size: x-small;">This is a trial web version
+          of the
           <b>UNOFFICIAL</b>
           Online
           Resources for the <i>students</i> of UITS. I will be primarily working on <a
-            href="https://github.com/b1tranger/oUITS-Resources" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/"  style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ). Most of the materials here are publicly available and you are free to modify and reuse them
+            href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
+            style="color:rgba(4, 0, 128, 0.806);">GitHub's
+            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/"
+            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ). Most of the materials here are publicly available and
+          you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
     </div>
