updated mailto email

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
             style="color:rgba(4, 0, 128, 0.806);">GitHub's
             Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/"
-            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ). Most of the materials here are publicly available and
+            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ).<br>Most of the materials here are publicly available and
           you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
