--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -57,7 +57,7 @@
                     batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
                 outdated or
                 not organized to the latest course list.<br>In that case, please email me
-                at <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=b1tranger.01@gmail.com&hl=en" target="_blank" style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific shortcomings of this page.
+                at <a href="mailto:b1tranger.01@gmail.com" target="_blank" style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific shortcomings of this page.
                 <br><br>Thanks in
                 advance!!
             </small></p>
