--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -132,7 +132,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://youkn0wwho.academy/" target="_blank">
+                    <a href="https://github.com/ShahjalalShohag" target="_blank">
                         youkn0wwho<br>(Shahjalal Shohag)
                     </a>
                 </td>
