--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -52,35 +52,42 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link">
+                    <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link" target="_blank">
                         S03 Notes
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">
+                    <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link" target="_blank">
                         S03 Books
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">
+                    <a href="#">
+                        CLASS ROUTINES
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link" target="_blank">
                         S03 Classroom Files
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">
+                    <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link" target="_blank">
                         S03 Outlines
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">
+                    <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link" target="_blank">
                         S03 Questions
                     </a>
                 </td>
