--- a/page-depth-01/page-depth-02/S02.html
+++ b/page-depth-01/page-depth-02/S02.html
@@ -49,25 +49,25 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link">S02 Notes +
+          <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link" target="_blank">S02 Notes +
             <b>Classroom Files</b></a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link">S02
+          <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link" target="_blank">S02
             Books</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link">S02
+          <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link" target="_blank">S02
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link">S02
+          <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link" target="_blank">S02
             Questions</a>
         </td>
       </tr>
