--- a/page-depth-01/page-depth-02/S04.html
+++ b/page-depth-01/page-depth-02/S04.html
@@ -49,25 +49,25 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link">S04
+          <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link" target="_blank">S04
             Notes</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link">S04
+          <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link" target="_blank">S04
             Books</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link">S04
+          <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link" target="_blank">S04
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link">S04
+          <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link" target="_blank">S04
             Questions</a>
         </td>
       </tr>
