--- a/page-depth-01/page-depth-02/S05.html
+++ b/page-depth-01/page-depth-02/S05.html
@@ -50,19 +50,19 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link">S05
+          <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link" target="_blank">S05
             Books</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link">S05
+          <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link" target="_blank">S05
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1fWVtEZDkhNz5-aFxeH06LW5am7GL_Hx1?usp=drive_link">S05
+          <a href="https://drive.google.com/drive/folders/1fWVtEZDkhNz5-aFxeH06LW5am7GL_Hx1?usp=drive_link" target="_blank">S05
             Questions</a>
         </td>
       </tr>
