--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -46,23 +46,23 @@
   <div class="container-5" align=center>
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">6th Semester FIles</p>
+        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);" target="_blank">6th Semester FIles</p>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link">S06
+          <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link" target="_blank">S06
             Books</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link">S06
+          <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link" target="_blank">S06
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link">S06
+          <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link" target="_blank">S06
             Questions</a>
         </td>
       </tr>
