--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -49,13 +49,13 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link">S08
+          <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"  target="_blank">S08
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link">S08
+          <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"  target="_blank">S08
             Questions</a>
         </td>
       </tr>
